# Olaf_Onboarding

./: README.md
src/obstacle_avoidance/: CMakeLists.txt  package.xml
src/obstacle_avoidance/include/: MyNode.h
src/obstacle_avoidance/launch/: my_node.launch
src/obstacle_avoidance/src/: .MyNode.cpp.swp  MyNode.cpp  MyNode2.cpp
src/obstacle_detection/: CMakeLists.txt  package.xml
src/obstacle_reaction/: CMakeLists.txt  package.xml
src/obstacle_reaction/src/: obstacle_reaction.cpp
test_files/: 2017-10-07-14-24-15.bag
